# Intelligent-Robotics-Major-Project

./: README.md
robot_ws/src/robot_control/: package.xml
robot_ws/src/robot_control/launch/: .robot_control.launch.swp  kobuki.launch.xml  robot_control.launch
robot_ws/src/robot_control/src/: control_node.py  cvtest.py  input_node.py  path_finding.py
robot_ws/src/robot_control/world/: Devon_03.dae  Devon_04.dae  Devon_05.dae  Devon_Marker.dae  Devon_REPF_02  MajorWorld01  MajorWorld02  MajorWorld03  MajorWorld04  MajorWorld05  MajorWorld06  MajorWorld07  MajorWorld08  Project2World
robot_ws/src/robot_control/world/Devon_/: model.config  model.sdf
robot_ws/src/robot_control/world/Devon_04_F/: model.config  model.sdf
robot_ws/src/robot_control/world/Devon_05_Mod/: model.config  model.sdf
robot_ws/src/robot_control/world/Devon_REPF_Final_01/: model.config  model.sdf
robot_ws/src/robot_control/world/Marker/: model.config  model.sdf
robot_ws/src/robot_msgs/: CMakeLists.txt  package.xml
robot_ws/src/robot_msgs/msg/: choice.msg  tasks.msg
